test_suite5/ALAN/test_suite/alan-2022-examples/failing/004230_mutation.alan
source O begin leave := not vCp6 end
